Improved cloudsim 7g paper example